--- a/src/modules/search/SearchBar.module.css
+++ b/src/modules/search/SearchBar.module.css
@@ -194,6 +194,12 @@
   &.focused {
     background: var(--color-background-alt);
   }
+
+  &:focus-visible {
+    outline: 2px solid var(--color-primary);
+    outline-offset: 2px;
+    background: var(--color-background-alt);
+  }
 }
 
 .title {
