--- a/src/modules/blog/components/BlogHeader.astro
+++ b/src/modules/blog/components/BlogHeader.astro
@@ -66,7 +66,14 @@ const formattedUpdateDate = updatedDate?.toLocaleDateString("en-US", {
     tags.length > 0 && (
       <ul class={styles.tags}>
         {tags.map((tag) => (
-          <li class={styles.tag}>{tag}</li>
+          <li class={styles.tag}>
+            <a
+              href={`/blog?tags=${encodeURIComponent(tag)}`}
+              class={styles.tagLink}
+            >
+              {tag}
+            </a>
+          </li>
         ))}
       </ul>
     )
