--- a/src/modules/blog/components/BlogPostItem.astro
+++ b/src/modules/blog/components/BlogPostItem.astro
@@ -29,7 +29,14 @@ const formattedDate = pubDate.toLocaleDateString("en-US", {
       tags.length > 0 && (
         <ul class={styles.tags}>
           {tags.map((tag) => (
-            <li class={styles.tag}>{tag}</li>
+            <li class={styles.tag}>
+              <a
+                href={`/blog?tags=${encodeURIComponent(tag)}`}
+                class={styles.tagLink}
+              >
+                {tag}
+              </a>
+            </li>
           ))}
         </ul>
       )
