--- a/src/modules/blog/components/BlogPostItem.astro
+++ b/src/modules/blog/components/BlogPostItem.astro
@@ -1,5 +1,6 @@
 ---
 import styles from "./BlogPostItem.module.css";
+import TagList from "./TagList";
 import type { CollectionEntry } from "astro:content";
 
 interface Props {
@@ -25,21 +26,6 @@ const formattedDate = pubDate.toLocaleDateString("en-US", {
     <time datetime={pubDate.toISOString()} class={styles.date}>
       {formattedDate}
     </time>
-    {
-      tags.length > 0 && (
-        <ul class={styles.tags}>
-          {tags.map((tag) => (
-            <li class={styles.tag}>
-              <a
-                href={`/blog?tags=${encodeURIComponent(tag)}`}
-                class={styles.tagLink}
-              >
-                {tag}
-              </a>
-            </li>
-          ))}
-        </ul>
-      )
-    }
+    {tags.length > 0 && <TagList tags={tags} ariaLabel="Post tags" />}
   </div>
 </article>
