--- a/src/modules/portfolio/components/SkillTags.astro
+++ b/src/modules/portfolio/components/SkillTags.astro
@@ -43,12 +43,7 @@ const softSkills = [
       {
         technicalSkills.map((skill) => (
           <li>
-            <a
-              href={`/blog?tags=${encodeURIComponent(skill.toLowerCase())}`}
-              class={styles.tag}
-            >
-              {skill}
-            </a>
+            <span class={styles.tag}>{skill}</span>
           </li>
         ))
       }
@@ -61,12 +56,7 @@ const softSkills = [
       {
         softSkills.map((skill) => (
           <li>
-            <a
-              href={`/blog?tags=${encodeURIComponent(skill.toLowerCase())}`}
-              class={styles.tag}
-            >
-              {skill}
-            </a>
+            <span class={styles.tag}>{skill}</span>
           </li>
         ))
       }
